<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlForgotPass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity">


    <RelativeLayout
        android:id="@+id/rlContentMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />

        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_one"
            android:layout_below="@id/toolbar"/>

        <TextView
            android:id="@+id/txtEnterMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAppLogo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/enter_mobil_number_email"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorDark" />

        <EditText
            android:id="@+id/etForgotMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEnterMobile"
            android:layout_margin="10dp"
            android:background="@drawable/edit_round"
            android:hint="@string/enter_mobil_number"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWritingDark"
            android:drawableLeft="@drawable/ic_mobile"
            android:drawablePadding="5dp"/>

        <EditText
            android:id="@+id/etforgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etForgotMobile"
            android:layout_margin="10dp"
            android:background="@drawable/edit_round"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWritingDark"
            android:drawableLeft="@drawable/ic_action_email"
            android:drawablePadding="5dp"/>

        <Button
            android:id="@+id/btnForgotNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etforgotEmail"
            android:layout_margin="10dp"
            android:background="@drawable/button_round"
            android:padding="20dp"
            android:text="@string/next"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>