<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".activity.SignupActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlRegister"
        android:background="@color/colorPrimary">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />
        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/toolbar"
            android:layout_gravity="center"
            android:src="@drawable/logo_one"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appLogo"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_round"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/enter_name"
            android:padding="20dip"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic__action_person"
            android:drawablePadding="5dp"
            android:textColor="@color/colorWritingDark"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etName"
            android:background="@drawable/edit_round"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/ic_action_email"
            android:drawablePadding="5dp"
            android:maxLines="1"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:singleLine="true"
            android:textColor="@color/colorWritingDark"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_round"
            android:layout_below="@+id/etEmail"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:maxLength="10"
            android:drawableLeft="@drawable/ic_mobile"
            android:drawablePadding="5dp"
            android:maxLines="1"
            android:hint="@string/enter_mobil_number"
            android:inputType="phone"
            android:padding="20dp"
            android:singleLine="true"
            android:textColor="@color/colorWritingDark"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_round"
            android:layout_below="@id/etMobileNumber"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:gravity="top"
            android:drawableLeft="@drawable/ic_action_address"
            android:drawablePadding="5dp"
            android:hint="@string/address"
            android:padding="20dp"
            android:singleLine="true"
            android:textColor="@color/colorWritingDark"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:background="@drawable/edit_round"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etAddress"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:hint="@string/enter_your_password"
            android:inputType="numberPassword"
            android:padding="20dip"
            android:maxLength="6"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:singleLine="true"
            android:textColor="@color/colorWritingDark"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_round"
            android:layout_below="@+id/etPassword"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:hint="@string/confirm_password"
            android:inputType="numberPassword"
            android:padding="20dip"
            android:singleLine="true"
            android:maxLength="6"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:textColor="@color/colorWritingDark"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:padding="20dp"
            android:background="@drawable/button_round"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffff"/>

    </RelativeLayout>

    </RelativeLayout>
</ScrollView>