<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_one"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogo"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="Login"
        android:textColor="@color/colorWriting"
        android:textSize="59sp" />
    <EditText
        android:id="@+id/etMobileNumbet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/enter_mobil_number"
        android:textColor="@color/colorWritingDark"
        android:inputType="number"
        android:background="@drawable/edit_round"
        android:maxLength="10"
        android:minLines="1"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_mobile"
        android:drawablePadding="5dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/enter_your_password"
        android:textColor="@color/colorWritingDark"
        android:inputType="numberPassword"
        android:background="@drawable/edit_round"
        android:maxLength="6"
        android:minLines="1"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        />
    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="101dp"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorDark"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/txtButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/button_round"
        android:padding="20dp"
        android:text="Login"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtRegisterYourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:textAllCaps="false"
            android:padding="8dp"
            android:textAlignment="center"
            android:text="@string/sign_up_now"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorDark"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>
</LinearLayout>